@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lgblkb-tools"
-version = "2.0.9"
+version = "2.0.10"
 description = "Tools to make life easier"
 authors = ["lgblkb <dbakhtiyarov@nu.edu.kz>"]
 
@@ -53,7 +53,9 @@ taskipy = "^1.2.1"
 [tool.taskipy.tasks]
 export="poetry export --without-hashes -f requirements.txt > requirements.txt"
 bump="poetry version patch"
-publish="poetry check && task export && task bump && gitchangelog > ChangeLog && poetry publish --build"
+install="poetry run pip install -U lgblkb-tools && poetry run pip install -U lgblkb-tools"
+publish="poetry check && task export && task bump && gitchangelog > ChangeLog && poetry publish --build && task install"
+
 
 [build-system]
 requires = ["poetry>=0.12"]
